<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lytIdentification"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            app:srcCompat="@android:drawable/ic_menu_my_calendar"
            android:contentDescription="@string/txt_icone_identification"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:gravity="center"
            android:text="@string/txt_identification"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_login"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/lbl_mot_de_passe"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextMotDePasse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageButton
                android:id="@+id/cmdRetourIdentifcation"
                android:layout_width="0dp"
                android:contentDescription="@string/lbl_retour"
                android:layout_height="35dp"
                android:layout_weight="0.5"
                android:background="@android:color/black"
                app:srcCompat="@drawable/ic_reply_white_24dp" />

            <ImageButton
                android:id="@+id/cmdTransfertIdentification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@null"
                android:contentDescription="@string/icone_transfert"
                app:srcCompat="@drawable/transfert" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>